force-app/main/default/objects/Financial_Scheme_Insights__c/Financial_Scheme_Insights__c.object-meta.xml
<CustomObject>
    <label>Financial &amp; Scheme Insights</label>
    <nameField>
        <displayFormat>FSI-{0000}</displayFormat>
        <label>Financial &amp; Scheme Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial &amp; Scheme Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>