force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Advance_Balance_Customer__c.field-meta.xml
<CustomField>
    <fullName>Advance_Balance_Customer__c</fullName>
    <label>Advance Balance (Customer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>