force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Advance_Utilization_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Advance_Utilization_Ratio__c</fullName>
    <label>Advance Utilization Ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>