force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Average_Basket_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Basket_Value__c</fullName>
    <label>Average Basket Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>