force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Cashback_Coupon_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Cashback_Coupon_Utilization__c</fullName>
    <label>Cashback / Coupon Utilization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>