force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial &amp; Scheme Insights</relationshipLabel>
    <relationshipName>Financial_Scheme_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>