force-app/main/default/objects/Financial_Scheme_Insights__c/fields/EMI_Partial_Payment_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>EMI_Partial_Payment_Behaviour__c</fullName>
    <label>EMI / Partial Payment Behaviour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>