force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Gold_Rate_Sensitivity_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Gold_Rate_Sensitivity_Indicator__c</fullName>
    <label>Gold Rate Sensitivity Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>