force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Gold_Scheme_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Gold_Scheme_Enrollment_Status__c</fullName>
    <label>Gold Scheme Enrollment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>