force-app/main/default/objects/Financial_Scheme_Insights__c/fields/High_Value_Purchase_Flag__c.field-meta.xml
<CustomField>
    <fullName>High_Value_Purchase_Flag__c</fullName>
    <label>High-Value Purchase Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>