force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Installment_Delay_Count__c.field-meta.xml
<CustomField>
    <fullName>Installment_Delay_Count__c</fullName>
    <label>Installment Delay Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>