force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Installment_Payment_Timeliness__c.field-meta.xml
<CustomField>
    <fullName>Installment_Payment_Timeliness__c</fullName>
    <label>Installment Payment Timeliness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>