force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Lifetime_Purchase_Value__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Purchase_Value__c</fullName>
    <label>Lifetime Purchase Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>