force-app/main/default/objects/Financial_Scheme_Insights__c/fields/No_of_Active_Schemes__c.field-meta.xml
<CustomField>
    <fullName>No_of_Active_Schemes__c</fullName>
    <label>No. of Active Schemes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>