force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Outstanding_Dues__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Dues__c</fullName>
    <label>Outstanding Dues</label>
    <length>255</length>
    <type>Text</type>
</CustomField>