force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Payment_Behaviour_Score__c.field-meta.xml
<CustomField>
    <fullName>Payment_Behaviour_Score__c</fullName>
    <label>Payment Behaviour Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>