force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Refund_History__c.field-meta.xml
<CustomField>
    <fullName>Refund_History__c</fullName>
    <label>Refund History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>