force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Return_Exchange_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Return_Exchange_Frequency__c</fullName>
    <label>Return / Exchange Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>