force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Scheme_Maturity_Prediction_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Maturity_Prediction_Date__c</fullName>
    <label>Scheme Maturity Prediction Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>