force-app/main/default/objects/Financial_Scheme_Insights__c/fields/Scheme_Type_Recurring_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Type_Recurring_Lumpsum__c</fullName>
    <label>Scheme Type (Recurring / Lumpsum)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>